added data model in about us page

--- a/DistributedInformationSystems/Views/Enrollments/About.cshtml
+++ b/DistributedInformationSystems/Views/Enrollments/About.cshtml
@@ -4,7 +4,7 @@
 }
 
     
-<h2>About</h2>
+<h2>About Us</h2>
 
 <p>
     Being a part of University of South Florida-Tampa Campus, it may interest many higher officials to see the enrollment trends of different ethnic groups.
@@ -40,5 +40,11 @@
             Prior to joining USF for masters, she has worked as Software developer in FIS and Cognizant. Vikanksha worked on researching for the data and did data-modelling.
             She also did the styling of the About Us page of the project. She made sure that the team adheres to all the conditions mentioned in the assignment.
         </td>
+    </tr>
+    <tr>
+    <th colspan="2"><br/><b>Data Model</b></th>
+    </tr>
+    <tr>
+        <td colspan="2"><img id="dmid" alt="DataModel" src="@Url.Content("~/img/DataModel.jpeg")" style="width:70%;height:50%;" /></td>
     </tr>
 </table>
