--- a/DistributedInformationSystems/Views/Shared/_Layout.cshtml
+++ b/DistributedInformationSystems/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <ul class="nav navbar-nav">
                         <li class=""><a href="@Url.Action("GenerateData", null, new { controller = "Enrollments" }, Request.Url.Scheme)"><span class="active glyphicon glyphicon-home"></span> Home</a></li>
                         <li class=""><a href="@Url.Action("History", null, new { controller = "Enrollments" }, Request.Url.Scheme)"><span class="active glyphicon glyphicon-stats"></span> History</a></li>
-                        <li class=""><a href="@Url.Action("About", null, new { controller = "Enrollments" }, Request.Url.Scheme)"><span class="active glyphicon glyphicon-user"></span> About</a></li>
+                        <li class=""><a href="@Url.Action("About", null, new { controller = "Enrollments" }, Request.Url.Scheme)"><span class="active glyphicon glyphicon-user"></span> About Us</a></li>
 
                     </ul>
                 </div>
